Centered all products on page, fixed navbar covering product at bottom of page

--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@ body {
   margin: 0;
 }
 .products {
-  max-width: 450px;
-  max-height: 450px;
   display: grid;
+  width: 100%;
   grid-template-columns: repeat(1, 100%);
+  gap: 3rem;
 }
 .product {
+  display: flex;
+  margin: auto;
+  max-width: 450px;
   color: white;
   position: relative;
   overflow: hidden;
-  width: 100%;
 }
 .product-img {
   width: 100%;
@@ -51,4 +53,7 @@ body {
 .container-buttons {
   height: 100%;
   width: 100%;
+}
+.footer-container {
+  margin-top: 80px;
 }
